    ResourceConfig has changed from an interface to an abstract class.
  - Media type charset parameter is recognized for reading/writing
    Java types for text-based content. Default charset is UTF-8 if charset 
    parameter is absent.
  - If a message body reader cannot be found return 415 (Unsupported Media Type)
  - if a message body writer cannot be found return 406 (Not Acceptable)
Support media type charset parameter when reading/writing Java types
    for text-based

release 0.6.2 (2008-03-27)
- Fixed issue 52: xml attrs in JSON representation deserialization
  https://jersey.dev.java.net/issues/show_bug.cgi?id=52

release 0.6.1 (2008-03-18)
- Support for xml attributes serialization/deserialization in JSON added
  (as a fix for 43)
  https://jersey.dev.java.net/issues/show_bug.cgi?id=43
- Fixed issue 45: Jersey leaves stream open; locks JAR file on Windows
  https://jersey.dev.java.net/issues/show_bug.cgi?id=45

release 0.6 (2008-03-07)
- Support for a Model View Controller abstraction and plugging in templates
  processors that process models that produce views. See classes in the package:
    com.sun.ws.rest.spi.template
- Consumable and configuration JSON support with JAXB
- Grizzly support is upgraded to 1.7.2.
- A sub-resource locator can now return a Class instance, that will be
  instantiated using a ComponentProvider, using the life-cycle rules for
  resource classes.
- Removed support for using the GET to return WADL of resources, only the
  OPTIONS method is supported. The application.wadl is still obtained using GET.
- Fixed issue 41: WebApplicationException(500) returning response code 2
  https://jersey.dev.java.net/issues/show_bug.cgi?id=41
- The default values for the following resource configuration features are
  now false: URI normalization, URI path canonicalization and URI redirection.
  This means by default no automatic redirection will be performed.
- The resource configuration feature FEATURE_IGNORE_MATRIX_PARAMS is